Fix auto scroll for messages, wrap text in messages if a really long word that doesn't fit the screen is encountered

--- a/backend/app/assets/stylesheets/message.css
+++ b/backend/app/assets/stylesheets/message.css
@@ -38,6 +38,10 @@
 	right: 0;
 }
 
+.message-contents {
+	word-break: break-all;
+}
+
 .message-control-buttons {
 	margin-bottom: 10px;
 }
